bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: too many arguments for method estSurMessage: ()Boolean
if ( estSurMessage(R) ) {
                  ^BDR:5: error: too many arguments for method estSurMessage: ()Boolean
else if ( estSurMessage(L) ){
                       ^BDR:9: error: too many arguments for method estSurMessage: ()Boolean
else if ( estSurMessage(I) ) {
                       ^BDR:10: error: too many arguments for method droite: ()Unit
    droite(2)
          ^BDR:13: error: too many arguments for method estSurMessage: ()Boolean
else if ( estSurMessage(A) ) {
                       ^BDR:16: error: too many arguments for method estSurMessage: ()Boolean
else if ( estSurMessage(B) ) {
                       ^BDR:19: error: too many arguments for method estSurMessage: ()Boolean
else if ( estSurMessage(C) ) {
                       ^BDR:22: error: too many arguments for method estSurMessage: ()Boolean
else if ( estSurMessage(Z) ) {
                       ^BDR:25: error: too many arguments for method estSurMessage: ()Boolean
else if ( estSurMessage(Y) ) {
                       ^BDR:28: error: too many arguments for method estSurMessage: ()Boolean
else if ( estSurMessage(X) ) {
                       ^